syntax = "proto2";

package nostrss;

service NostrssGRPC {
    rpc State (StateRequest) returns (StateResponse);
    
    rpc ProfilesList (ProfilesListRequest) returns (ProfilesListResponse);
    rpc ProfileInfo (ProfileInfoRequest) returns (ProfileInfoResponse);
    rpc DeleteProfile (DeleteProfileRequest) returns (DeleteProfileResponse);
    rpc AddProfile (AddProfileRequest) returns (AddProfileResponse);

    rpc FeedsList (FeedsListRequest) returns (FeedsListResponse);
    rpc FeedInfo (FeedInfoRequest) returns (FeedInfoResponse);
    rpc DeleteFeed (DeleteFeedRequest) returns (DeleteFeedResponse);
    rpc AddFeed (AddFeedRequest) returns (AddFeedResponse);

    rpc StartJob (StartJobRequest) returns (StartJobResponse);
    rpc StopJob (StopJobRequest) returns (StopJobResponse);

}

message StartJobRequest {
    required string feed_id = 1;
}
message StartJobResponse {}

message StopJobRequest {
    required string feed_id = 1;
}
message StopJobResponse {}

message StartStreamRequest {}
message StartStreamResponse {}

message StateRequest {}
message StateResponse {
    required string state = 1;
}

message FeedItem {
    required string id = 1;
    required string name = 2;
    required string url = 3;
    required string schedule = 4;
    repeated string profiles = 5;
    repeated string tags = 6;
    optional string template = 7;
    required uint64 cache_size = 8;
    required uint64 pow_level = 9;
}


// === Feeds ===
message FeedsListRequest{}
message FeedsListResponse {
    repeated FeedItem feeds = 1;
}

message AddFeedRequest {
    required FeedItem feed = 1;
    optional bool save = 2;
}

message AddFeedResponse {
    
}

message DeleteFeedRequest {
    required string id = 1;
    optional bool save = 2;
}

message DeleteFeedResponse {
    
}

message FeedInfoRequest {
    required string id = 1;
}

message FeedInfoResponse {
    required FeedItem feed = 1;
}

// === Profiles ===

message ProfilesListRequest {}
message ProfilesListResponse {
    repeated ProfileItem profiles = 1; 
}

message ProfileItem {
    required string id = 1;
    required string public_key = 2;
    optional string name = 3;
    repeated string relays = 4;
    optional string display_name = 5;
    optional string description = 6;
    optional string picture = 7;
    optional string banner = 8;
    optional string nip05 = 9;
    optional string lud16 = 10;
    optional int32 pow_level = 11;
    repeated string recommended_relays = 12;
}

message NewProfileItem {
    required string id = 1;
    required string private_key = 2;
    optional string name = 3;
    repeated string relays = 4;
    optional string display_name = 5;
    optional string description = 6;
    optional string picture = 7;
    optional string banner = 8;
    optional string nip05 = 9;
    optional string lud16 = 10;
    optional int32 pow_level = 11;
    repeated string recommended_relays = 12;
}

message AddProfileRequest {
    required NewProfileItem profile = 1;
    optional bool save = 2;
}

message AddProfileResponse {
    
}

message DeleteProfileRequest {
    required string id = 1;
    optional bool save = 2;
}

message DeleteProfileResponse {
}

message ProfileInfoRequest {
    required string id = 1;
}

message ProfileInfoResponse {
    required ProfileItem profile = 1;
}
